--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "node": "^18.7.0",
+    "phone": "^3.1.25",
     "validator": "^13.7.0"
   }
 }
